mobile fix for chat send btn overflow

--- a/bbf_synclounge_in_organizr.css
+++ b/bbf_synclounge_in_organizr.css
@@ -122,6 +122,9 @@ main {
 
 /* BBF in Organizr customizations start here */
 
+.v-navigation-drawer .layout.row.wrap .flex.xs12:nth-of-type(2){
+    height: 45vh !important;
+}
 .v-navigation-drawer{
     margin-top: 45px !important;
 }
@@ -164,6 +167,9 @@ img.ma-1 {
 		visibility: visible;
 		transform: translateX(12px);
 	}
+	.v-navigation-drawer .layout.row.wrap .flex.xs12:nth-of-type(2){
+		height: 44vh !important;
+	}
 }
 
 .v-toolbar {
@@ -202,8 +208,4 @@ main {
 
 .container {
 	background-color: rgba(0,0,0,0) !important;
-}
-
-.v-navigation-drawer .layout.row.wrap .flex.xs12:nth-of-type(2){
-    height: 45vh !important;
 }
